--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,12 @@
     justify-content: center;
     align-items: center;
   }
+
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   
   .modal-content {
     background: white;
